syntax = "proto2";

package stremio.core.models;

option java_package = "com.stremio.core.models";

import "stremio/core/models/loadable.proto";
import "stremio/core/models/meta_details.proto";
import "stremio/core/types/addon.proto";
import "stremio/core/types/library.proto";
import "stremio/core/types/meta_item.proto";
import "stremio/core/types/subtitle.proto";
import "stremio/core/types/stream.proto";
import "stremio/core/types/video.proto";

message Player {
  optional Selected selected = 1;
  optional VideoParams video_params = 2;
  optional LoadableMetaItem meta_item = 3;
  repeated LoadableSubtitles subtitles = 4;
  optional stremio.core.types.Video next_video = 5;
  optional stremio.core.types.Video.SeriesInfo series_info = 6;
  optional stremio.core.types.LibraryItem library_item = 7;
  optional StreamState stream_state = 8;

  message VideoParams {
    optional string hash = 1;
    optional int64 size = 2;
    optional string filename = 3;
  }
  message StreamState {
    optional SubtitleTrack subtitle_track = 1;
    optional int64 subtitle_delay = 2;
    optional AudioTrack audio_track = 3;
    optional int64 audio_delay = 4;
    optional float playback_speed = 5;
    optional string player_type = 6;
  }
  message SubtitleTrack {
    required string id = 1;
    required bool embedded = 2;
    optional string language = 3;
  }
  message AudioTrack {
    required string id = 1;
    optional string language = 2;
  }
  message Selected {
    required stremio.core.types.Stream stream = 1;
    optional stremio.core.types.ResourceRequest stream_request = 2;
    optional stremio.core.types.ResourceRequest meta_request = 3;
    optional stremio.core.types.ResourcePath subtitles_path = 4;
  }
}

message LoadableSubtitles {
  required string title = 1;
  required stremio.core.types.ResourceRequest request = 2;
  oneof content {
    Loading loading = 3;
    Error error = 4;
    Subtitles ready = 5;
  }
}

message Subtitles {
  repeated stremio.core.types.Subtitle subtitles = 1;
}